--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,12 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.8.9-0.1A"
+group= "totalhamman.missingthings" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "missingthings"
 
 minecraft {
-    version = "1.8.9-11.15.1.1761"
+    version = "1.8.9-11.15.1.1760"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -80,8 +80,3 @@ processResources
         exclude 'mcmod.info'
     }
 }
-
-
-sourceSets { main { output.resourcesDir = output.classesDir } }
-
-idea { module { inheritOutputDirs = true } }
